# rails

./: Cargo.toml  Dockerfile  README.md  image-build.sh  image-run.sh  transactions.csv
src/: application.rs  domain.rs  infrastructure.rs  main.rs  repository.rs
