[package]
name = "rails"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
bigdecimal = { version = "0.3", features = ["serde"] }
thiserror = "1.0"
exitcode = "1.1.2"

[dev-dependencies]
mockall = "0.11.1"
assert_cmd = "2.0"
predicates = "2.1"